# azure-freebsd-minimal

./: CMakeLists.txt  README.md  azure-imds-query.8  azure-imds-query.cc  config-generic.h  config.h  instance.schema  mini_http.hh
